calculator-app/k8s/Kafka/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    backing-svc-app: kafka-zookeeper
  name: zookeeper
  namespace: kafka-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      backing-svc-app: kafka-zookeeper
  template:
    metadata:
      labels:
        backing-svc-app: kafka-zookeeper
    spec:
      nodeSelector:
        kubernetes.io/hostname: docker-desktop
      containers:
        - name: kafka-zookeeper
          image: confluentinc/cp-zookeeper:7.6.0
          imagePullPolicy: IfNotPresent
          ports:
           - containerPort: 2181
          volumeMounts:
            - mountPath: "/var/lib/zookeeper/data"
              name: kafka-zookeeper-data-storage
            - mountPath: "/var/lib/zookeeper/log"
              name: kafka-zookeeper-logs-storage
      volumes:
        - name: kafka-zookeeper-data-storage
          persistentVolumeClaim:
            claimName: kafka-zookeeper-data-pvc
        - name: kafka-zookeeper-logs-storage
          persistentVolumeClaim:
            claimName: kafka-zookeeper-logs-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  labels:
    backing-svc-app: kafka-broker
  namespace: kafka-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      backing-svc-app: kafka-broker
  template:
    metadata:
      labels:
        backing-svc-app: kafka-broker
    spec:
      hostname: kafka-broker
      nodeSelector:
        kubernetes.io/hostname: docker-desktop
      containers:
        - name: kafka-broker
          image: confluentinc/cp-kafka:7.6.0
          imagePullPolicy: IfNotPresent
          ports:
           - containerPort: 9092
          volumeMounts:
            - mountPath: "/var/lib/kafka/data"
              name: kafka-broker-data-storage
      volumes:
        - name: kafka-broker-data-storage
          persistentVolumeClaim:
            claimName: kafka-broker-data-pvc
