calculator-app/k8s/Kafka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-kafka
  namespace: kafka-cluster
spec:
  rules:
  - host: local-kafka
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name:  kafka-broker-service
            port: 
              number: 9092
